attempt to use elliptic curve private key if default RSA is null

Libera.chat changed their instructions for client certificates to use ed25519 keys. The default overload for QSslSocket::setPrivateKey() expects RSA. Attempt to add EC private key if RSA is null.

BUG: 476580